# simuladorprocesos

./: Cargo.toml  README.md  build_helper.bat
benches/: scheduler_bench.rs
examples/: productor_consumidor.rs  round_robin_demo.rs
src/: lib.rs  main.rs  process.rs  simulation.rs
src/core/: metrics.rs  mod.rs  process.rs  resource.rs  simulation.rs
src/core/scheduler/: fcfs.rs  mod.rs  priority_preemptive.rs  round_robin.rs  sjf.rs
src/ipc/: channel.rs  mod.rs  semaphore.rs
src/scheduler/: mod.rs  sjf.rs
src/ui/: cli.rs  logger.rs  mod.rs
src/utils/: test_helpers.rs
tests/: ipc_tests.rs  resource_tests.rs  scheduler_tests.rs
ui/: app.slint  globals.slint
ui/components/: edit_modal.slint  init_modal.slint  sidebar.slint
ui/components/common/: hud_badge.slint  hud_button.slint  hud_card.slint  hud_input.slint  hud_slider.slint
ui/components/dashboard/: dashboard.slint  metric_card.slint  queue_item.slint
ui/components/gantt/: gantt_bar.slint  gantt_view.slint
ui/components/process_table/: create_modal.slint  process_table.slint  table_row.slint
